[gd_scene load_steps=2 format=3 uid="uid://dxqs750g7hooi"]

[ext_resource type="Script" path="res://Editor/PLaneEdit/plane_edit.gd" id="1_4htpo"]

[node name="PlaneEdit" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
script = ExtResource("1_4htpo")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
metadata/_edit_group_ = true

[node name="CheckBox2" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.5
offset_top = -5.5
offset_right = 5.5
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Path" type="OptionButton" parent="."]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Side" type="OptionButton" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
item_count = 2
popup/item_0/text = "Right"
popup/item_0/id = 0
popup/item_1/text = "Left"
popup/item_1/id = 1

[node name="Type" type="OptionButton" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
item_count = 4
popup/item_0/text = "passenger"
popup/item_0/id = 0
popup/item_1/text = "maize"
popup/item_1/id = 1
popup/item_2/text = "fighter"
popup/item_2/id = 2
popup/item_3/text = "—Åargo"
popup/item_3/id = 3

[node name="TimePlane" type="LineEdit" parent="."]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
alignment = 1

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 2
flat = true

[connection signal="item_selected" from="Path" to="." method="_on_path_item_selected"]
[connection signal="item_selected" from="Side" to="." method="_on_side_item_selected"]
[connection signal="item_selected" from="Type" to="." method="_on_type_item_selected"]
[connection signal="focus_exited" from="TimePlane" to="." method="_on_time_plane_focus_exited"]
[connection signal="pressed" from="CheckBox" to="." method="_on_check_box_pressed"]
